feat: enhance banking transactions and add tests
- Update deposit and withdraw methods to return transaction objects
- Add assertions in tests to verify transaction details
- Introduce banking.rb for better structure
- Add roman_numerals.rb for future functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,7 @@
   },
   "editor.stickyScroll.enabled": false,
   "editor.codeLens": false,
-  "editor.hover.enabled": false,
+  "editor.hover.enabled": "off",
   "editor.guides.indentation": false,
   "editor.renderLineHighlight": "gutter",
   "editor.renderLineHighlightOnlyWhenFocus": true,
